<resources>
    <string name="app_name">ProjectAndroid</string>
    <string name="item_1">Item 1</string>
    <string name="eat_all_day">Eat all day</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>

    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alma">Alma</string>
    <string name="todo">TODO</string>
</resources>