<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:padding="10dp"
    tools:context=".Profile"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:inputType="textPassword" />


        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@android:color/holo_blue_dark"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_margin="25dp"

            />
        <Button
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@android:color/holo_blue_dark"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_margin="25dp"

            />







</LinearLayout>