<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:padding="15dp"
    >

    <EditText
        android:id="@+id/l_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        android:inputType="textEmailAddress"

        />

    <EditText
        android:id="@+id/l_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textPassword"

        />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@android:color/holo_blue_dark"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_margin="25dp"
        />


</LinearLayout>